<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    tools:context=".MainActivity">



       <TextView
           android:layout_marginTop="40dp"
           android:id="@+id/Title"
           android:layout_centerHorizontal="true"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginEnd="47dp"
           android:text="@string/Title"
           android:textColor="@color/black"
           android:textSize="30sp"
           />
       <TextView
           android:id="@+id/dev"
           android:layout_marginTop="5dp"
           android:layout_centerHorizontal="true"
           android:layout_below="@id/Title"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/Dev"
           android:textColor="@color/material_on_primary_emphasis_high_type"
           android:textSize="22sp"
           />

    <ImageView
        android:id="@+id/imgview"
        android:layout_centerInParent="true"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/img1"
        android:layout_centerHorizontal="true"

        />


    <TextView
           android:id="@+id/Info"
           android:layout_marginTop="5dp"
           android:layout_centerHorizontal="true"
           android:layout_above="@id/bt1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/info"
            android:padding="40dp"
           android:gravity="center"
           android:textColor="@color/material_on_primary_emphasis_high_type"
           android:textSize="22sp"
           />
    <Button
        android:id="@+id/bt1"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt1"
        android:background="@drawable/bt1"
        />



</RelativeLayout>