<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity"
    android:background="@drawable/ic_background"
    >

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back"
        android:padding="20dp"
        />
    <TextView
        android:layout_marginTop="40dp"
        android:id="@+id/Title"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="47dp"
        android:text="@string/Title"
        android:textColor="@color/black"
        android:textSize="30sp"
        />
    <TextView
        android:id="@+id/dev"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Dev"
        android:textColor="@color/material_on_primary_emphasis_high_type"
        android:textSize="22sp"
        />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        android:background="@drawable/shape1">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/info2"
                android:textColor="#737373"
                android:textSize="18sp"
                android:padding="30dp"
                />
            <ImageView
                android:id="@+id/imgview2"
                android:layout_below="@id/txt"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:src="@drawable/img1"
                android:layout_centerHorizontal="true"

                />
            <Button
                android:id="@+id/bt2"
                android:layout_below="@id/imgview2"
                android:layout_marginTop="30dp"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan"
                android:background="@drawable/bt2"/>

        </RelativeLayout>

    </RelativeLayout>


</RelativeLayout>